fix - play button visibility, text box will only allow numbers, css changes

--- a/src/components/algoApps/graphApp/GraphNavbar.css
+++ b/src/components/algoApps/graphApp/GraphNavbar.css
@@ -1,85 +1,79 @@
-.navDiv{
-    margin: 5px 15px 25px 15px;
-    padding: 15px;
-    background: rgba(255, 255, 255, 0.3);
-    border-radius: 10px;
-    box-shadow: 5px 2px 5px rgb(110, 110, 110);
-  }
-  
-  .btn {
-      border: none;
-      color: white;
-      padding: 12px 25px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 18px;
-      margin: 4px 2px;
-      transition-duration: 0.4s;
-      cursor: pointer;
-    }
-  
-    .btn {
-      background-color: #f6efeb; 
-      color: black; 
-      margin-top: 13px;
-      margin-left: 25px;
-    }
-    
-    .btn:hover {
-      background-color: #c8f4cd;
-      box-shadow: 7px 10px 20px -7px rgb(86, 86, 86);
-    }
+.navDiv {
+  margin: 5px 15px 25px 15px;
+  padding: 15px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  box-shadow: 5px 2px 5px rgb(110, 110, 110);
+}
 
-    .navDiv.selected {
-        box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
-        background-color: #ccc;
-    }
-  
-    .btn:focus{
-        background-color: rgb(253, 217, 186);
-        border-radius: 5px;
-        border: 2px solid orange;
-    }
-  
-  
-  
-   .itmClass:hover{
-      height: 36px;
-      color: #8c00ff;
-      box-shadow: 1px 1px 4px rgb(86, 86, 86);
-      border-radius: 15px;
-   }
-    
-   .menuClass{
-    box-shadow: 2px 2px 5px -1px rgb(86, 86, 86);
-  }
-  .menuClass:hover{
-    box-shadow: 0px 0px 0px 0px rgb(86, 86, 86);
-    border-top: 1px solid black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-  }
-    
-    input[type=text].numVal {
-      width: 80%;
-      height: 50px;
-      padding: 12px 20px;
-      margin: 8px 0;
-      box-sizing: border-box;
-      border: 2px solid #ccc;
-      -webkit-transition: 0.5s;
-      transition: 0.5s;
-      outline: none;
-      font-size: 15px;
-    }
-    
-    input[type=text]:focus {
-      border: 2px solid #555;
-      background-color: rgb(230, 230, 230);
-    }
-  
-    input[type=text]:hover {
-      box-shadow: 3px 3px 7px -1px rgb(86, 86, 86);  
-    }
-  
+.btn {
+  background: rgb(223, 231, 255, 0.5);
+  color: #1e3a8a;
+  border: 1px solid rgba(199, 210, 254, 0.6);
+  padding: 12px 30px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 12px;
+  cursor: pointer;
+  margin: 12px 18px;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.btn:hover {
+  background: rgba(201, 213, 255, 0.9);
+  color: #111827;
+  box-shadow: 0 6px 16px rgba(30, 58, 138, 0.2);
+  transform: scale(1.03);
+}
+
+.navDiv.selected {
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  background-color: #ccc;
+}
+
+.btn:focus {
+  background-color: rgb(253, 217, 186);
+  border-radius: 5px;
+  border: 2px solid orange;
+}
+
+.itmClass:hover {
+  height: 36px;
+  color: #8c00ff;
+  box-shadow: 1px 1px 4px rgb(86, 86, 86);
+  border-radius: 15px;
+}
+
+.menuClass {
+  box-shadow: 2px 2px 5px -1px rgb(86, 86, 86);
+}
+.menuClass:hover {
+  box-shadow: 0px 0px 0px 0px rgb(86, 86, 86);
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
+input[type="text"].numVal {
+  width: 80%;
+  height: 50px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  font-size: 15px;
+}
+
+input[type="text"]:focus {
+  border: 2px solid #555;
+  background-color: rgb(230, 230, 230);
+}
+
+input[type="text"]:hover {
+  box-shadow: 3px 3px 7px -1px rgb(86, 86, 86);
+}
